Readded Bootstrap for styling, fixed main weather card with desired blurred background, added comments to HTML so I dont get lost

--- a/Assets/Css/style.css
+++ b/Assets/Css/style.css
@@ -1,3 +1,4 @@
+/* General styling */
 *{
     box-sizing: border-box;
     margin: 0;
@@ -43,7 +44,7 @@ margin-left: 2%;
  }
  .column1 label{
     font-size: 28px;
-    margin-left: 2%;
+    margin-left: 3%;
     margin-bottom: 1%;
     font-weight: bold;
     color: beige;
@@ -51,4 +52,14 @@ margin-left: 2%;
  .city-history{
     color: beige;
     margin-left: 5%;
+ }
+
+ /* Main Weather Card */
+ .mainWeather{
+   background-color: rgb(0,0,0,.2);
+   backdrop-filter: blur(14px);
+   color: beige;
+   text-align: left;
+   padding: 50px;
+   margin-top: 2%;
  }
